<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="nearby_str">OUR RESTAURANTS NEARBY</string>
    <string name="nearby_str2">RESTAURANTS NEARBY</string>
	<string name="res_str">No Results</string>    
	<string name="res_des">enter resturants to get results</string> 
    <string name="breakfast_txt">Breakfast</string>
     <string name="breakfast_des">There are 20 restaurants nearby</string>
     
     <!-- Button Strings -->
	<string name="btn_signin">SIGN IN</string>
	<string name="btn_signup">SIGNUP</string>
	
	<!-- Fields -->
	<string name="hint_name">name</string>
	<string name="hint_username">username</string>
	<string name="hint_password1">new password</string>
	<string name="hint_password2">password</string>
	<string name="hint_email">user@email.com</string>
	<string name="hint_phone">(010) 555 4444</string>
	<string name="txt_optional">optional</string>
	
	
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Favorites</item>
        <item >Recent</item>
        <item >Reservations</item>
        <item >Ratings</item>
        <item >Settings</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/fav_icon</item>
        <item>@drawable/recent_icon</item>
        <item>@drawable/res_icon</item>
        <item>@drawable/ratings_icon</item>
        <item>@drawable/settings_icon</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
</resources>
