<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#E0E0E0">

   <ScrollView 
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:padding="10dp"
       >
       <LinearLayout 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           >
           <EditText
               android:id="@+id/edit_name"
               android:layout_width="match_parent"
               android:hint="@string/hint_name"
               android:layout_marginBottom="10dp"
               android:layout_height="35dp"
               android:ems="10"
               android:inputType="textPersonName" >

               <requestFocus />
           </EditText>

           <EditText
               android:id="@+id/edit_username"
               android:layout_width="match_parent"
               android:layout_height="35dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_username"
               android:ems="10" />

           <EditText
               android:id="@+id/edit_password1"
               android:layout_width="match_parent"
               android:layout_height="35dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_password1"
               android:ems="10"
               android:inputType="textPassword" />
           
           <EditText
               android:id="@+id/edit_password2"
               android:layout_width="match_parent"
               android:layout_height="35dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_password2"
               android:ems="10"
               android:inputType="textPassword" />

           <EditText
               android:id="@+id/edit_phone"
               android:layout_width="match_parent"
               android:layout_height="35dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_phone"
               android:ems="10"
               android:inputType="phone" />

           <EditText
               android:id="@+id/edit_email"
               android:layout_width="match_parent"
               android:layout_height="35dp"
               android:layout_marginBottom="10dp"
               android:hint="@string/hint_email"
               android:ems="10"
               android:inputType="textEmailAddress" />
           
           <FrameLayout 
               android:layout_width="match_parent"
               android:layout_height="80dp"
               >
               <ImageView 
                   android:layout_width="80dp"
                   android:id="@+id/user_thumb"
                   android:clickable="true"
                   android:scaleType="fitXY"
                   android:layout_height="match_parent"
                   android:background="@drawable/avatar"
                   />
               <Button 
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:id="@+id/cancel"
                   android:background="@drawable/cancel_icon"
                   android:visibility="gone"
                   />
               
               <TextView 
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="120dp"
                   android:textSize="14sp"
                   android:textStyle="italic"
                   android:text="@string/txt_optional"
                   />
               
           </FrameLayout>
           <RelativeLayout 
           android:layout_width="match_parent"
           android:layout_height="40dp"
           android:layout_marginTop="10dp"
           >
           <Button
               android:layout_width="100dp"
               android:layout_height="match_parent"
               android:id="@+id/btn_signup"
               android:text="@string/btn_signup"
               android:onClick="JumpToPage1"
               android:textColor="#FFFFFF"
               android:background="#4CAF50"
               />
            <Button
               android:layout_width="100dp"
               android:layout_height="match_parent"
               android:id="@+id/btn_signin"
               android:textColor="#FFFFFF"
               android:text="@string/btn_signin"
               android:layout_marginLeft="110dp"
               android:onClick="JumpToPage2"
               android:background="#EF6C00"
               />
       </RelativeLayout>
           
       </LinearLayout>
       
       
   </ScrollView>
   

</RelativeLayout>