<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/container"
    android:background="#E0E0E0">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:alpha="80"
                    android:scaleType="fitXY"
                    android:src="@drawable/breakfast" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="100dp"
                    android:padding="10dp"
                    android:text="@string/breakfast_txt"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="30dp"
                    android:background="#80424242"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
              			android:layout_margin="10dp"
              			android:tint="#FFFFFF"
              			android:layout_gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:src="@drawable/restaurant_icon" />
                    
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily=""
                        android:padding="5dp"
                        android:text="@string/breakfast_des"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />

                    
                </LinearLayout>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/refresh" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2E2E2E"
                android:padding="3dp"
                android:text="@string/nearby_str"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_wrapper"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/list1_divider"
        android:dividerHeight="1dp"
        android:visibility="gone"
        android:listSelector="@drawable/list1_row_selector" />

</RelativeLayout>